# instrument-data

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_commands.json  vcpkg.json
cmake/: instrument-data-config.cmake.in  instrument-data.pc.in
include/: instrument-data.h
ports/instrument-plugin-api/: portfile.cmake  vcpkg.json
ports/libffi/: portfile.cmake  vcpkg.json
src/: buffer.c  buffer.h  manager.c  process.c  process.h  registry.c  registry.h  shm.c  shm.h  util.c
src/internal/: buffer.h  process.h  registry.h  shm.h  util.h
tests/: CMakeLists.txt  stress_chaos.c  stress_deterministic.c  test_basic.c  test_common.h  test_config.h.in  test_main.c  test_multiprocess.c  test_registry.c
